new folder with added function and some details

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Purchase</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    
 </head>
+
 <body>
+    <title>purchase</title>
     <div class="container">
         
         <div class="left">
@@ -28,7 +31,10 @@
                 </div>
             </div>
         </div>
-        <img src="./images/sale label.png" alt="10%" height="86px" width="86px">
+        <div class="image-container">
+            <img src="./images/label.svg" alt="10%">
+            <div class="overlay">10%</div>
+        </div>
         <div class="right">            
             <div class="headerTwo"><img src="./images/pic.png" alt="spanner"></div>
             <div class="mainTwo">
